# schemathesis

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pydocstyle  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .relint.yml  .rstcheck.cfg  .travis.yml  404.html  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.bookworm  Dockerfile.buster  Dockerfile.trixie  Justfile  LICENSE  MIGRATION.md  Makefile  README.md  README.rst  SECURITY.md  TROPHY_CASE.md  api.rst  changelog.py  changelog.rst  codecov.yml  extending.rst  index.html  mkdocs.yml  mypy.ini  (+8 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  trophy-submission.yml
.github/workflows/: auto-release.yml  build.yml  codeql-analysis.yml  codspeed.yml  commit.yml  docs.yml  example-build.yml  example-manual-build.yml  example-no-build.yml  example-project.yml  example-public-api.yml  master_update.yml  memory-benchmark.yml  push.yml  release.yml  scheduled.yml  test-corpus.yml  test-hypothesis.yml  update-corpus.yml  update-pre-commit.yml
adr/: 0001-record-architecture-decisions.md  0002-resolve-schema-references-lazily.md  0003-delay-schema-loading.md  0004-use-src-layout.md  0005-use-poetry.md  0006-resolve-references-load-schemas-eagerly.md
advanced/targeted/: index.html
benches/: bundler.py  cli.py  conftest.py  coverage_phase.py  negative_phase.py  ref_explosion.py  references.py  response_conformance.py  schema.py
benches/data/: appveyor.json  bbci.json  evetech.json  kubernetes.json  osisoft.json  stripe.json  universe.json  vmware.json
benches/memory/: hooks.py  measure.py  scenarios.json
ci/github-actions/: index.html
ci/gitlab-ci/: index.html
ci/overview/: index.html
configuration/: index.html
configuration/authentication/: index.html
configuration/file/: index.html
core-concepts/: index.html
corpus/: tools.py
docs/: additional-content.rst  api.rst  auth.rst  changelog.md  changelog.rst  ci-cd-guide.md  cli-usage-guide.md  cli.md  cli.rst  compatibility.rst  conf.py  configuration.md  continuous_integration.rst  contrib.rst  core-concepts.md  customization.rst  data-generation.md  data-generation.rst  examples.rst  experimental.rst  extending.rst  faq.md  faq.rst  getting-started.md  getting-started.rst  graphql.rst  how-it-works.md  how.rst  index.md  index.rst  introduction.rst  migration.md  phases.md  python.rst  quick-start.md  recipes.rst  requirements.txt  resources.md  sanitizing.rst  schemas.rst  (+7 more)
docs/advanced/: targeted.md
docs/ci/: github-actions.md  gitlab-ci.md  overview.md
docs/explanations/: adaptive-testing.md  data-generation.md  examples.md  pytest.md  stateful.md
docs/extending/: data-generation.md
docs/guides/: allure.md  auth.md  cicd.md  config-optimization.md  continuous-fuzzing.md  coverage.md  crash-reproduction.md  custom-media-types.md  custom-response-deserializers.md  custom-serializers.md  docker.md  extending-cli.md  extending.md  fuzz-dictionary.md  graphql-custom-scalars.md  html-report.md  hypothesis-strategies.md  index.md  python-apps.md  schema-conformance.md  server-sent-events.md  stateful-testing.md  targeted.md  triage.md
docs/openapi/: examples.md
docs/reference/: checks.md  cli.md  configuration.md  hooks.md  python.md  reporting.md  trophy-case.md  warnings.md
docs/sources/: modules.rst  schemathesis.extra.rst  schemathesis.rst
docs/stylesheets/: extra.css
docs/tutorials/: cli.md  pytest.md
docs/using/: cli.md  configuration.md  python-integration.md
example/: Dockerfile  README.md  README.rst  app.py  compose.yml  docker-compose.yml  main.py  openapi.json  requirements-app.in  requirements-app.txt  requirements-pytest.in  requirements-pytest.txt  requirements.in  requirements.txt
example/app/: app.py  config.json  db.py  models.py  openapi.yaml  settings.py  validation.py  views.py
example/database/: schema.sql
example/test/: conftest.py  hooks.py  test_app.py
example/tests/: conftest.py  extensions.py  test_app.py
examples/booking/: Dockerfile  README.md  app.py  docker-compose.yml
explanations/: index.html
explanations/checks/: index.html
explanations/data-generation/: index.html
explanations/examples/: index.html
explanations/pytest/: index.html
explanations/stateful/: index.html
explanations/workflow/: index.html
extending/auth/: index.html
extending/checks/: index.html
extending/data-generation/: index.html
extending/hooks/: index.html
extending/metrics/: index.html
extending/overview/: index.html
faq/: index.html
getting-started/: index.html
guides/: index.html
guides/auth/: index.html
guides/cicd/: index.html
guides/config-optimization/: index.html
guides/custom-media-types/: index.html
guides/custom-serializers/: index.html
guides/extending-cli/: index.html
guides/targeted/: index.html
quick-start/: index.html
resources/: index.html
scripts/: is_interesting.sh  profile.py
search/: search_index.json
test/: CLAUDE.md  app.py  conftest.py  ext.py  test_app.py  test_asgi.py  test_async.py  test_auth.py  test_case_curl_cmd.py  test_checks.py  test_commands.py  test_common_parameters.py  test_compat.py  test_converter.py  test_core.py  test_curl.py  test_dereferencing.py  test_direct_access.py  test_errors.py  test_examples.py  test_filters.py  test_fixups.py  test_generator.py  test_hooks.py  test_hypothesis.py  test_internal.py  test_lazy.py  test_loaders.py  test_masking_sensitive_output.py  test_models.py  test_output.py  test_package.py  test_parameters.py  test_parametrization.py  test_parametrizer.py  test_petstore.py  test_pytest.py  test_rate_limit.py  test_reader.py  test_readers.py  (+14 more)
test-corpus/: conftest.py  flaky.json  incompatible_enums.json  incompatible_regex.json  incomplete_azure.json  invalid_path_parameters.json  recursive_references.json  test_corpus.py  test_inference.py  test_schemastore.py
troubleshooting/: index.html
tutorial/: index.html
(+2667 files in other folders)
